syntax = "proto3";
package payment;

option go_package = "github.com/grpc-example-edts/payment/routeguide/client/payment-api/paymentpb";

message AddPaymentRequest {
  string orderId = 1;
  float price = 2;
}

message AddPaymentResponse {
  string id = 1;
}

service PaymentService {
  rpc AddPayment (AddPaymentRequest) returns (AddPaymentResponse) {};
}
